syntax = "proto3";

package ocpcnovelv2;
message SingleOcpcCpcBid {
    int64 unitid = 1;
    double cpcBid = 2;
    double cvGoal1PostCvr = 3;
    double cvGoal2PostCvr = 4;
    double cvGoal3PostCvr = 5;
    double cvGoal4PostCvr = 6;
    int64 minCpm = 7;
    double cvGoal1Smooth = 8;
    double cvGoal2Smooth = 9;
    double cvGoal3Smooth = 10;
    double cvGoal4Smooth = 11;
    double minBid = 12;
    double cpaSuggest = 13;
    double paramT = 14;
    double cvrCalFactor = 15;
}

message OcpcCpcBidList {
    repeated SingleOcpcCpcBid adrecord = 1;
}